Added swagger specification for portforward
